js/js.translator/testData/incremental/invalidation/moveExternalDeclarationsBetweenFiles/js-module-a.mjs
export function externalDemoFunction() { return 0; }
